Version 4.1.0
-------------

  features
   - improved version of afb-extend interface (less requirement on json objects)
   - add a wakeup time when preparing event loop

  fixes
   - fix the macros LIBAFB_BEFORE_VERSION and LIBAFB_AFTER_VERSION
   - fix issue on timer management
   - fix deprecated hooks of LIBC

Version 4.0.4
-------------

  features
   - REWORKED SCHEDULER
   - add new RPC support
   - rework of the afb-api for RPC
   - returning HTTP binary blobs from bindings
   - add support of specialized interface
   - add pseudo socket protocol 'char:' for being client of serial link

  fixes
   - json-locator fixes
   - fix overflow detection of afb-type
   - fix leak in afb-hreq
   - fix automatic pong response of WS
   - avoid concurrent calls to MHD_run
   - fix compatibility to old json-c
   - enforce use of default credentials
   - fix bug in afb-trace

  minors/details
   - improvements of afb-wsj1
   - cleaning afb-stub-ws
   - improve type conversion

Version 4.0.3
-------------

  features
   - add function handling event within api v4 (for extensions)

  fixes
   - add release version in pc files
   - Fix POST/HTTP requests

Version 4.0.2
-------------

  features
    - add reply code if available in wsj1
    - Enforce use of strings to define extensions in macro AFB_EXTENSION
    - Check revision of the version of interface v4
    - support of byte array type: afb_type_predefined_bytearray
    - Remove cookie's attribute 'Secure'
    - improve error handling compatibility with v4
    - Allow providing more than one converter for a given couple of types
    - implement conversion of parameters of requests

  fixes
    - update timeout of sessions on requests
    - early setting of event listeners, needed for concurrency

  minors/details
    - saved bytes in http keys for data
    - avoid allocation for setting cookies
    - emit error on second HTTP reply trial
    - improve generation of json string in afb-json-legacy